--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,256 @@
-/* CSS Document */
-*, *::after, *::before {
-  box-sizing:border-box;  
+/* :root {
+  
+} */
+
+/* Reset default css  */
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0
 }
 
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block
+}
+
+body {
+  line-height: 1
+}
+
+ol,
+ul {
+  list-style: none
+}
+
+blockquote,
+q {
+  quotes: none
+}
+
+blockquote:after,
+blockquote:before,
+q:after,
+q:before {
+  content: '';
+  content: none
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin: 0 0 1em
+}
+
+
+/* Tools  */
+
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+
+/* General */
+* {
+  font-family: inherit;
+  line-height: inherit;
+  color: inherit;
+}
+
+html {
+  height: 100%;
+  font-size: 16px;
+  font-size: 62.5%;
+  /* background-color: rgb(50, 68, 68); */
+}
+
+body {
+  height: 100%;
+  font-family: 'Lato', Helvetica, Arial, Verdana, sans-serif;
+  color: #000000;
+  font-size: 1.6rem;
+  line-height: 1.4;
+}
+
+/* Typografie  */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+
+  line-height: 1.1;
+}
+
+/* Add margin top to heading when it comes after another piece of content 
+* + h1, * + h2, * + h3, * + h4, * + h5, * + h6 {
+  /* margin-top: 60px; 
+}*/
+
+
+/* Heading 1 */
+h1 {
+  color: #ffffff;
+
+  margin-bottom: 16px;
+
+  font-size: 30px;
+  font-size: 3.0rem;
+
+}
+
+/* Heading 2 */
+h2 {
+  margin-bottom: 12px;
+  font-size: 22px;
+  font-size: 2.2rem;
+}
+
+/* Heading 3 */
+h3 {
+  font-size: 18px;
+  font-size: 1.8rem;
+}
+
+p {
+  color: var(--text-color);
+  margin-bottom: 2rem;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+strong {
+  font-weight: 700;
+}
+
+em,
+i {
+  font-style: italic;
+}
+
+ul {
+  list-style-type: none;
+}
+
+ol {
+  list-style: decimal;
+}
+
+/*  
+
+After this comment starts own written css
+Above is the tweaked version of the reset css to my whishes
+
+Styling header and section
+
+*/
