--- a/styles/style.css
+++ b/styles/style.css
@@ -194,38 +194,51 @@ h6 {
   /* margin-top: 60px; 
 }*/
 
-
-/* Heading 1 */
-h1 {
-  color: #ffffff;
-
-  margin-bottom: 16px;
-
-  font-size: 30px;
-  font-size: 3.0rem;
-
+@font-face {
+  font-family: "Montserrat", "Helvetica", "Arial", "Sans-Serif";
+  src: url(../assets/Montserrat-Bold.ttf);
+  color: black;
 }
 
-/* Heading 2 */
-h2 {
-  margin-bottom: 12px;
-  font-size: 22px;
-  font-size: 2.2rem;
+@font-face {
+  font-family: "Roboto", "Helvetica", "Arial", "Sans-Serif";
+  src: url(../assets/Roboto-Regular.ttf);
+  color: black;
+}
+
+/* Heading 1, Heading 2 */
+h1, h2 {
+  font-family: "Montserrat";
+  font-size: 2rem;
+  line-height: 2.5rem;
+  font-weight: 700;
+  letter-spacing: .1rem;
+}
+
+h1 {
+  text-transform: uppercase;
+  margin-bottom: 1.5rem;
 }
 
 /* Heading 3 */
 h3 {
-  font-size: 18px;
-  font-size: 1.8rem;
+  margin-bottom: .5rem;
+
+  font-family: "Roboto";
+  font-size: 1.6rem;
+  line-height: 2.1rem;
 }
 
 p {
-  color: var(--text-color);
-  margin-bottom: 2rem;
+
+  font-family: "Roboto";
+  font-weight: 400;
+  
+  margin-top: .5rem;
 }
 
 a {
-  color: #ffffff;
+  color: black;
   text-decoration: none;
 }
 
@@ -254,3 +267,158 @@ Above is the tweaked version of the reset css to my whishes
 Styling header and section
 
 */
+
+nav {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+
+  width: 100%;
+}
+
+  nav ul:first-of-type {
+    border-bottom: 0.1rem solid rgb(210, 210, 210);
+  }
+
+nav ul:nth-of-type(2) > a {
+  display: flex;
+  justify-content: center;
+  
+  padding: 1.5rem;
+  width: 50%;
+  height: auto;
+
+  background-color: transparent;
+  border: 1px solid #e3e3e3;
+
+  color: black;
+  font-size: 1.1rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.previewer-large:first-of-type {
+  width: 100%;
+  height: auto;
+
+  margin: 0 0 2rem;
+}
+
+.previewer-large {
+  /* width: 100%;
+  height: auto; */
+
+  margin: 2rem 0 2rem;
+}
+
+.previewer-large figure {
+  position: relative;
+  
+}
+
+.previewer-large figure::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  height: 75%;
+  z-index: 1;
+
+  background: linear-gradient(to bottom,rgba(255,255,255,0) 0,rgba(0,0,0,.8) 100%);
+}
+
+.previewer-large figure img {
+  width: 100%;
+}
+
+.previewer-large figure figcaption {
+  position: absolute;
+  bottom: 3rem;
+  left: 3rem;
+
+  color: white;
+
+  z-index: 2;
+}
+
+.previewer-large figure figcaption h1 {
+  margin-bottom: 1rem;
+}
+
+.previewer-large figure figcaption h1 span {
+  display: block;
+}
+
+.previewer-large figure figcaption p {
+  margin-bottom: 3rem;
+}
+
+.previewer-large figure figcaption a {
+  padding: 1.5rem 3rem;
+
+  border-radius: 3rem;
+
+  background-color: white;
+}
+
+.product-highlight {
+  padding: 0 2rem;
+}
+
+.product-highlight div {
+  margin-bottom: 2rem;
+}
+
+.product-highlight p:first-of-type {
+  font-family: "Montserrat";
+  font-size: 1.4rem;
+  font-weight: 700;
+  line-height: 2rem;
+
+  color: #53565a;
+}
+
+.product-highlight h2 {
+  font-family: "Montserrat";
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 2rem;
+  text-transform: uppercase;
+
+  margin-bottom: 2rem;
+}
+
+.product-highlight a {
+  font-family: "Roboto";
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 2rem;
+  text-decoration: underline;
+}
+
+.previewer-small {
+  display: flex;
+
+  width: 100%;
+}
+
+.previewer-small a {
+  width: 100%;
+  text-decoration: none;
+}
+
+.previewer-small a:first-of-type {
+  margin-right: 1rem;
+}
+
+.previewer-small img {
+  width: 100%;
+}
+
