--- a/styles/style.css
+++ b/styles/style.css
@@ -445,20 +445,23 @@ span {
   margin-bottom: 1rem;
 
   width: 100%;
+  overflow: hidden;
+  background-color: gray;
 
   text-transform: uppercase;
 }
 
 .previewer-double figure > img {
-
   object-fit: cover;
   width: 100%;
   height: 100%;
+
+  transform: scale(1.5) translate(-10px, 20px);
 }
 
 .previewer-double > figure:first-of-type figcaption {
   position: absolute;
-  bottom: 7rem;
+  bottom: 10rem;
   right: 1rem;
 
   color: white;
@@ -478,7 +481,7 @@ span {
 
 .previewer-double > figure:last-of-type figcaption {
   position: absolute;
-  bottom: 7rem;
+  bottom: 9rem;
   left: 1rem;
 
   color: white;
