--- a/styles/style.css
+++ b/styles/style.css
@@ -1,110 +1,17 @@
-/* :root {
-  
-} */
-
 /* Reset default css  */
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
-a,
-abbr,
-acronym,
-address,
-applet,
-article,
-aside,
-audio,
-b,
-big,
-blockquote,
-body,
-canvas,
-caption,
-center,
-cite,
-code,
-dd,
-del,
-details,
-dfn,
-div,
-dl,
-dt,
-em,
-embed,
-fieldset,
-figcaption,
-figure,
-footer,
-form,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-header,
-hgroup,
-html,
-i,
-iframe,
-img,
-ins,
-kbd,
-label,
-legend,
-li,
-mark,
-menu,
-nav,
-object,
-ol,
-output,
-p,
-pre,
-q,
-ruby,
-s,
-samp,
-section,
-small,
-span,
-strike,
-strong,
-sub,
-summary,
-sup,
-table,
-tbody,
-td,
-tfoot,
-th,
-thead,
-time,
-tr,
-tt,
-u,
-ul,
-var,
+a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,
 video {
   margin: 0;
   padding: 0;
   border: 0
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
   display: block
 }
 
@@ -117,15 +24,11 @@ ul {
   list-style: none
 }
 
-blockquote,
-q {
+blockquote, q {
   quotes: none
 }
 
-blockquote:after,
-blockquote:before,
-q:after,
-q:before {
+blockquote:after,blockquote:before,q:after,q:before {
   content: '';
   content: none
 }
@@ -177,12 +80,7 @@ body {
 
 /* Typografie  */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1,h2,h3,h4,h5,h6 {
   margin-top: 0;
 
   line-height: 1.1;
@@ -193,24 +91,60 @@ h6 {
   /* margin-top: 60px; 
 }*/
 
+/* Root variables */
+
+:root {
+  --black : #000;
+  --white: #fff;
+  --darker-white: #f5f5f5;
+  --darkest-white: #e7e7e7;
+
+  --lighter-gray: #BBBCBC;
+  --light-gray: #6e6e6e;
+  --gray: #53565a;
+  --dark-gray: #444444;
+
+  --svg-fill-whitegreen: #b2fce4;
+
+  
+
+  --border-color: #d2d2d2;
+}
+
+/* Custom fonts */
+
 @font-face {
-  font-family: "Montserrat", "Helvetica", "Arial", "Sans-Serif";
-  src: url(../assets/Montserrat-Bold.ttf);
-  color: black;
+  font-family: 'Montserrat Regular';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../assets/Montserrat-Regular.ttf);
 }
 
 @font-face {
-  font-family: "Roboto", "Helvetica", "Arial", "Sans-Serif";
-  src: url(../assets/Roboto-Regular.ttf);
-  color: black;
+  font-family: 'Montserrat Bold';
+  font-style: normal;
+  font-weight: 700;
+  src: url(../assets/Montserrat-Bold.ttf);
+}
+
+@font-face {
+  font-family: 'Roboto Regular';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../assets/Montserrat-Regular.ttf);
+}
+@font-face {
+  font-family: 'Roboto Bold';
+  font-style: normal;
+  font-weight: 700;
+  src: url(../assets/Roboto-Bold.ttf);
 }
 
 /* Heading 1, Heading 2 */
 h1, h2 {
-  font-family: "Montserrat";
+  font-family: 'Montserrat Bold', Helvetica, sans-serif;
   font-size: 2rem;
   line-height: 2.5rem;
-  font-weight: 700;
   letter-spacing: .1rem;
 }
 
@@ -223,25 +157,29 @@ h1 {
 h3 {
   margin-bottom: .5rem;
 
-  font-family: "Roboto";
+  font-family: 'Roboto Regular', Helvetica, sans-serif;
   font-size: 1.6rem;
+  color: var(--dark-gray);
+
   line-height: 2.1rem;
 }
 
 p {
 
-  font-family: "Roboto";
-  font-weight: 400;
+  font-family: 'Roboto Regular', Helvetica, sans-serif;
   
   margin-top: .5rem;
 }
 
 a {
-  font-family: "Montserrat";
-  color: black;
+  font-family: 'Montserrat Regular', Helvetica, sans-serif;
+  color: var(--black);
   text-decoration: none;
 }
 
+a:focus, button:focus {
+  outline: blue solid .2rem;
+}
 strong {
   font-weight: 700;
 }
@@ -300,28 +238,29 @@ nav ul li:nth-of-type(2) a svg {
 
 /* Start navigation css */
 
-nav {
+header > nav {
   z-index: 3;
   position: fixed;
   
   width: 100%;
   height: 6.8rem;
 
-  background-color: #fff;
+  background-color: var(--white);
 }
 
-nav ul {
+header > nav ul {      
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: center;  
 
   width: 100%;
   height: 6.8rem;
+  margin-bottom: .1rem;
 
-  border-bottom: 0.1rem solid rgb(210, 210, 210);
+  border-bottom: 0.1rem solid var(--border-color);
 }
 
-nav ul li {
+header > nav ul li {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -354,9 +293,9 @@ header > ul > a {
   height: auto;
 
   background-color: transparent;
-  border: 1px solid #e3e3e3;
+  border: 1px solid var(--darkest-white);
 
-  color: black;
+  color: var(--black);
   font-size: 1.1rem;
   font-weight: 700;
   text-transform: uppercase;
@@ -404,7 +343,7 @@ header > ul > a {
   bottom: 3rem;
   left: 3rem;
 
-  color: white;
+  color: var(--white);
 
   z-index: 2;
 }
@@ -426,10 +365,10 @@ span {
 
   border-radius: 5rem;
 
-  background-color: white;
+  background-color: var(--white);
 
   font-size: 1.3rem;
-  font-weight: 700;
+  font-family: 'Montserrat Bold', Helvetica, sans-serif;
 
   text-transform: uppercase;
 }
@@ -448,19 +387,17 @@ span {
   text-transform: uppercase;
 }
 
-.product-highlight p:first-of-type {
-  font-family: "Montserrat";
+.product-highlight div > p:first-of-type {
+  font-family: 'Montserrat Bold', Helvetica, sans-serif;
   font-size: 1.4rem;
-  font-weight: 700;
   line-height: 2rem;
 
-  color: #53565a;
+  color: var(--gray);
 }
 
 .product-highlight h2 {
-  font-family: "Montserrat";
+  font-family: 'Montserrat Bold', Helvetica, sans-serif;
   font-size: 2rem;
-  font-weight: 700;
   line-height: 2rem;
   text-transform: uppercase;
 
@@ -469,9 +406,8 @@ span {
 
 .product-highlight a,
 #mens_shop main section:last-of-type a {
-  font-family: "Roboto";
+  font-family: 'Roboto Bold', Helvetica, sans-serif;
   font-size: 1.6rem;
-  font-weight: 700;
   line-height: 2rem;
   text-decoration: underline;
 }
@@ -484,18 +420,38 @@ span {
 
 .previewer-small a {
   width: 100%;
-  text-decoration: none;
-}
-
-.previewer-small a {
+  
   margin-right: 1rem;
+
+  text-decoration: none;
 }
 
 .previewer-small img {
   width: 100%;
 }
 
-.price {
+.previewer-small a li figure figcaption p:first-of-type {
+  font-size: 1.1rem;
+  font-weight: 700;
+
+  padding: .2rem .5rem;
+  margin-bottom: .5rem;
+
+  color: var(--black);
+  border-left: .3rem solid var(--black);
+
+  text-transform: uppercase;
+}
+
+.previewer-small a li figure figcaption p:nth-of-type(2) {
+  font-size: 1.4rem;
+  line-height: 1.9rem;
+  margin-bottom: .5rem;
+
+  color: var(--light-gray);
+}
+
+.previewer-small a li figure figcaption p:last-of-type {
   font-weight: 700;
 }
 
@@ -512,7 +468,7 @@ span {
 
   width: 100%;
   overflow: hidden;
-  background-color: gray;
+  background-color: var(--light-gray);
 
   text-transform: uppercase;
 }
@@ -530,7 +486,7 @@ span {
   bottom: 10rem;
   right: 1rem;
 
-  color: white;
+  color: var(--white);
 }
 
 .previewer-double > figure:first-of-type figcaption h2 {
@@ -550,7 +506,7 @@ span {
   bottom: 9rem;
   left: 1rem;
 
-  color: white;
+  color: var(--white);
 }
 
 .previewer-double > figure:last-of-type figcaption h2 {
@@ -564,7 +520,7 @@ span {
 
 .info-slider {
   padding: 3rem 2rem;
-  background-color: #ececec;
+  background-color: var(--darkest-white);
 }
 
 .info-slider ul {
@@ -602,7 +558,7 @@ span {
 
 
 .info-slider ul li a h2 {
-  color: #fff;
+  color: var(--white);
   margin-bottom: 2rem;
 }
 
@@ -612,11 +568,11 @@ article {
   padding: 2.4rem;
   margin: 1.6rem;
 
-  border: .1rem solid #bbbcbc;
+  border: .1rem solid var(--lighter-gray);
 }
 
 article h3 {
-  font-family: 'Montserrat', Helvetica;
+  font-family: 'Montserrat Regular', Helvetica, sans-serif;
   font-size: 1.4rem;
 
   font-weight: 700;
@@ -625,15 +581,15 @@ article h3 {
 }
 
 article p {
-  color: #6e6e6e;
+  color: var(--light-gray);
 
-  font-family: 'Roboto', Helvetica;
+  font-family: 'Roboto Regular', Helvetica, sans-serif;
   font-size: 1.4rem;
 }
 
 #homepage main section:last-of-type {
-  background-color: #000000;
-  color: #fff;
+  background-color: var(--black);
+  color: var(--white);
   
   width: 100%;
 
@@ -655,7 +611,7 @@ main section:last-of-type section {
 }
 
 main section:last-of-type section p {
-  font-family: 'Montserrat', Helvetica, sans-serif;
+  font-family: 'Montserrat Regular', Helvetica, sans-serif;
 
   margin: 0 0 2rem;
   font-size: 1.5rem;
@@ -672,8 +628,8 @@ footer > a {
 
   padding: 2rem 0;
   align-items: center;
-  background-color: rgb(83, 86, 90);
-  color: #fff;
+  background-color: var(--gray);
+  color: var(--white);
   width: 100%;
 
   font-weight: 700;
@@ -685,7 +641,7 @@ footer > a {
 /* extraction of inline svg css */
 
 footer > a > svg {
-  fill: white;
+  fill: var(--white);
   clip-rule: evenodd;
   fill-rule: evenodd;
   width: 1.4rem;
@@ -699,7 +655,7 @@ footer section:first-of-type ul {
 
   margin: 1rem 2rem 0;
 
-  border-bottom: 2px solid #e3e3e3;
+  border-bottom: 2px solid var(--darkest-white);
 }
 
 footer section:first-of-type ul > a li{
@@ -714,9 +670,9 @@ footer section:first-of-type ul > a li{
   font-size: 1.4rem;
   line-height: 4rem;
   text-transform: uppercase;
-  color: black;
+  color: var(--black);
   cursor: pointer;
-  border-top: 1px solid #e3e3e3;
+  border-top: 1px solid var(--darkest-white);
 }
 
 footer section:nth-of-type(2) {
@@ -730,10 +686,11 @@ footer > section:nth-of-type(2) ul {
 }
 
 footer > section:nth-of-type(2) h3 {
-  font-family: 'Montserrat', Helvetica;
+  font-family: 'Montserrat Regular', Helvetica, sans-serif;
   font-size: 1.4rem; 
-  line-height: 1.1;
   text-transform: uppercase;
+  
+  line-height: 1.1;
 
   margin-bottom: 1.5rem ;
 }
@@ -745,7 +702,7 @@ footer > section:nth-of-type(2) a {
   min-width: 17.5rem;
 
   margin-right: 1rem;
-  background-color: #e7e7e7;
+  background-color: var(--darkest-white);
 }
 
 footer > section:nth-of-type(2) a img {
@@ -754,8 +711,7 @@ footer > section:nth-of-type(2) a img {
 }
 
 footer > section:nth-of-type(2) a li h2 {
-  font-family: 'Montserrat', Helvetica;
-  font-weight: 700;
+  font-family: 'Montserrat Bold', Helvetica, sans-serif;
   font-size: 1.2rem;
   text-transform: uppercase;
 }
@@ -815,12 +771,12 @@ footer > ul:nth-of-type(2) li {
 }
 
 footer > ul:nth-of-type(2) li a {
-  font-family: 'Roboto', Helvetica;
+  font-family: 'Roboto Bold', Helvetica, sans-serif;
   font-size: 1.4rem;
   text-decoration: none;
-  font-weight: 600;
+  font-weight: 500;
 
-  color: #53565a;
+  color: var(--gray);
 
   line-height: 1.9rem;
 }
@@ -852,7 +808,7 @@ footer section:last-of-type > ul:last-of-type li svg{
 }
 
 footer section:last-of-type > ul:last-of-type li svg:last-of-type defs{
-  fill:#b2fce4;
+  fill: var(--svg-fill-whitegreen);
 }
 
 footer section:last-of-type > ul:last-of-type li:last-of-type{
@@ -864,7 +820,7 @@ footer section:last-of-type > ul:last-of-type li:last-of-type{
 footer > p {
   font-size: 1.4rem;
   text-align: center;
-  color: rgb(68, 68, 68);
+  color: var(--dark-gray);
 
   padding: 1.5rem 2rem;
 
@@ -875,7 +831,7 @@ footer > p {
 /* styling mens shop page */
 
 #mens_shop header > h1 {
-  background: 0% 0% / cover rgb(245, 245, 245);
+  background: 0% 0% / cover var(--darker-white);
 
   font-size: 1.4rem;
 
@@ -895,8 +851,7 @@ footer > p {
 
 #mens_shop header > ul li {
   font-size: 1.2rem;
-  font-weight: 700;
-  font-family: 'Montserrat', Helvetica;
+  font-family: 'Montserrat Bold', Helvetica, sans-serif;
   text-transform: uppercase;
   display: flex;
   cursor: pointer;
@@ -922,13 +877,11 @@ footer > p {
   }
 
   #mens_shop header > ul:last-of-type li{
-    font-family: 'Montserrat', Helvetica;
+    font-family: 'Montserrat Bold', Helvetica, sans-serif;
     font-size: 1.4rem;
-    font-weight: 700;
-
     flex-shrink: 0;
     padding: 0 1.5rem 1rem;
-    border-bottom: .1rem solid #BBBCBC;
+    border-bottom: .1rem solid var(--lighter-gray);
   }
 
   #mens_shop header > ul:last-of-type li  {
@@ -944,7 +897,7 @@ footer > p {
     height: .3rem;
     width: 100%;
 
-    background-color: black;
+    background-color: var(--black);
   }
 
 #mens_shop .product-highlight {
@@ -977,8 +930,8 @@ footer > p {
 
   border-radius: 5rem;
 
-  color: white;
-  background-color: black;
+  color: var(--white);
+  background-color: var(--black);
 
   font-size: 1.3rem;
   font-weight: 800;
@@ -988,8 +941,132 @@ footer > p {
 
 #mens_shop main > section:last-of-type p {
   font-size: 1.4rem;
-  font-family: 'Roboto', Helvetica;
+  font-family: 'Roboto Regular', Helvetica, sans-serif;
   
-  color: #444;
+  color: var(--dark-gray);
   margin-top: 1.5rem;
 }
+
+/* Hamburger menu styling */
+
+header > fieldset {
+  width: 100%;
+  height: 100%;
+  /* position: fixed;
+  top: 0;
+  left: 0; */
+  overflow: hidden;
+  background-color: var(--white);
+  transition: left 300ms ease-in-out 0s;
+  z-index: 999;
+}
+
+header > fieldset > section:first-of-type {
+  display: flex;
+  padding: 3rem 2rem 1rem;
+}
+
+header > fieldset > section:first-of-type > button{
+  display: flex;
+  width: 4rem;
+  justify-content: center;
+  align-items: center;
+}
+
+  header > fieldset > section:first-of-type > button:first-of-type {
+    flex: 10 1 0%;
+    justify-content: flex-start;
+  }
+
+header > fieldset > section:first-of-type > button > svg {
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+header > fieldset > section:first-of-type,
+header > fieldset > section:nth-of-type(2) {
+  display: flex;
+  justify-content: center;
+
+  font-size: 1.6rem;
+  font-family: 'Montserrat Bold', Helvetica, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+
+  margin: 0 0 1rem;
+}
+
+header > fieldset > section a {
+  text-align: center;
+  width: 10rem;
+  
+  padding: 1rem;
+}
+
+header > fieldset > section:nth-of-type(2) a:first-of-type {
+  border-bottom: 0.2rem solid var(--black);
+}
+
+header > fieldset > section:nth-of-type(2) a:last-of-type {
+  border-bottom: 0.2rem solid var(--lighter-gray);
+}
+
+fieldset > nav {
+  flex: 2 1 0%;
+  padding-top: 2.5rem;
+}
+
+fieldset > nav > ul > li > h2 {
+  display: inline-block;
+  margin: 0 0 .5rem;
+  font-size: 1.6rem;
+  font-weight: 700;
+
+  text-transform: uppercase;
+}
+
+fieldset > nav > ul > li {
+  padding: 0 1.6rem 2.8rem;
+  break-inside: avoid;
+}
+
+fieldset > nav a {
+  font-size: 1.6rem;
+  font-weight: 600;
+  font-family: 'Roboto Regular', Helvetica, sans-serif;
+  color: var(--gray);
+
+  text-transform: capitalize;
+
+  line-height: 3rem;
+}
+
+/* Door tijd nood is het niet gelukt om de rest van het menu af te maken, ik laat dit wel staan voor wanneer ik het af maak */
+
+/* fieldset > section:last-of-type {
+  font-family: 'Montserrat Bold', Helvetica, sans-serif;
+  text-transform: uppercase;
+
+  width: 100%;
+
+  margin: 1rem 0px 1.6rem 1.6rem;
+}
+
+fieldset >  h3 {
+  margin-bottom: 1rem;
+}
+
+fieldset > section:last-of-type ul {
+  display: flex;
+  width: 100%;
+
+  overflow: scroll;
+}
+
+fieldset > section:last-of-type ul a {
+  min-width: 29.5rem;
+}
+
+fieldset > section:last-of-type ul a img {
+  height: 13rem;
+} */
