added some type of menu

--- a/styles/style.css
+++ b/styles/style.css
@@ -1070,3 +1070,23 @@ fieldset > section:last-of-type ul a {
 fieldset > section:last-of-type ul a img {
   height: 13rem;
 } */
+
+
+form {
+  z-index: 999;
+	background-color:var(--white);
+	
+	position:absolute;
+	left:0;
+	top:0;
+	bottom:0;
+	
+	width: 100%;
+	transform:translateX(-100%);
+	
+	transition:.5s;
+}
+
+form.showForm {
+	transform:translateX(0%);
+}
