--- a/styles/style.css
+++ b/styles/style.css
@@ -950,16 +950,25 @@ footer > p {
 /* Hamburger menu styling */
 
 header > fieldset {
-  width: 100%;
-  height: 100%;
-  /* position: fixed;
-  top: 0;
-  left: 0; */
-  overflow: hidden;
-  background-color: var(--white);
-  transition: left 300ms ease-in-out 0s;
   z-index: 999;
+	
+	position:absolute;
+	left:0;
+	top:0;
+	bottom:0;
+	
+	width: 100%;
+  height: 100%;
+  background-color: var(--white);
+	transform:translateX(-100%);
+	
+	transition:.5s;
 }
+
+  fieldset.showFieldset {
+    transform:translateX(0%);
+  }
+
 
 header > fieldset > section:first-of-type {
   display: flex;
@@ -974,7 +983,7 @@ header > fieldset > section:first-of-type > button{
 }
 
   header > fieldset > section:first-of-type > button:first-of-type {
-    flex: 10 1 0%;
+    margin-right: 21rem;
     justify-content: flex-start;
   }
 
@@ -1070,23 +1079,3 @@ fieldset > section:last-of-type ul a {
 fieldset > section:last-of-type ul a img {
   height: 13rem;
 } */
-
-
-form {
-  z-index: 999;
-	background-color:var(--white);
-	
-	position:absolute;
-	left:0;
-	top:0;
-	bottom:0;
-	
-	width: 100%;
-	transform:translateX(-100%);
-	
-	transition:.5s;
-}
-
-form.showForm {
-	transform:translateX(0%);
-}
